test/files/run/static-annot-repl.check
Type in expressions to have them evaluated.
Type :help for more information.

scala> 

scala> import annotation.static
import annotation.static

scala> @static var x1 = 42
x1: Int = 42

scala> @static val x2 = 43
x2: Int = 43

scala> @static def x3 = 44
<console>:8: error: The @static annotation is not allowed on method definitions.
       @static def x3 = 44
                   ^

scala> x1
res0: Int = 42

scala> x2
res1: Int = 43

scala> x3
<console>:9: error: not found: value x3
              x3
              ^

scala> class Test {
  @static def x = 42
}
<console>:9: error: The @static annotation is not allowed on method definitions.
         @static def x = 42
                     ^

scala> 